ossetup/config/iptables.conf
# Generated by iptables-save v1.3.5 on Thu Jul 16 18:44:42 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:Kiba-Firewall-INPUT-FORWARD - [0:0]
-A INPUT -j Kiba-Firewall-INPUT-FORWARD 
-A FORWARD -j Kiba-Firewall-INPUT-FORWARD 
-A Kiba-Firewall-INPUT-FORWARD -i lo -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -p icmp -m icmp --icmp-type any -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -p esp -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -p ah -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -d 224.0.0.251 -p udp -m udp --dport 5353 -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -p udp -m udp --dport 631 -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -p tcp -m tcp --dport 631 -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -s 192.168.0.0/255.255.0.0 -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -s 10.0.0.0/255.0.0.0 -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -m iprange --src-range 172.16.0.0-172.31.255.255 -j ACCEPT 
-A Kiba-Firewall-INPUT-FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Thu Jul 16 18:44:42 2015
